TranslationsMethods/03/gen/ru/parser/antlr/ProgramParser.java
// Generated from /home/vladkuznetsov/Vl/Projects/MT/03/src/main/java/antlr/Program.g4 by ANTLR 4.8
package ru.parser.antlr;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class ProgramParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, Int=3, LongLong=4, Auto=5, Bool=6, Double=7, LongDouble=8, 
		Void=9, String=10, Vector=11, PlusPlus=12, MinusMinus=13, Not=14, PlusAssign=15, 
		MinusAssign=16, MultiplyAssign=17, DivAssign=18, ModAssign=19, XorAssign=20, 
		AndAssign=21, OrAssign=22, LeftShiftAssign=23, RightShiftAssign=24, Plus=25, 
		Minus=26, Multiply=27, Div=28, Mod=29, Xor=30, And=31, Or=32, Less=33, 
		Greater=34, Equal=35, NotEqual=36, LessEqual=37, GreaterEqual=38, AndAnd=39, 
		OrOr=40, LeftShift=41, RightShift=42, Assign=43, Tilde=44, Comma=45, Semicolon=46, 
		OpenBracket=47, CloseBracket=48, OpenFigureBracket=49, CloseFigureBracket=50, 
		Point=51, Pointer=52, OpenSqBracket=53, CloseSqBracket=54, Child=55, Colon=56, 
		Break=57, Return=58, Continue=59, Delete=60, Include=61, For=62, While=63, 
		Class=64, Struct=65, If=66, Switch=67, Case=68, Number=69, FloatNumber=70, 
		Digits=71, Digit=72, Boolean=73, True=74, False=75, Word=76, AnyInQuoutes=77, 
		WS=78;
	public static final int
		RULE_program = 0, RULE_headers = 1, RULE_header = 2, RULE_block = 3, RULE_function = 4, 
		RULE_arguments = 5, RULE_argument = 6, RULE_references = 7, RULE_r_class = 8, 
		RULE_struct = 9, RULE_classOrStructBody = 10, RULE_field = 11, RULE_using = 12, 
		RULE_body = 13, RULE_r_for = 14, RULE_r_while = 15, RULE_r_if = 16, RULE_r_switch = 17, 
		RULE_r_case = 18, RULE_instruction = 19, RULE_maybeExpression = 20, RULE_expression = 21, 
		RULE_value = 22, RULE_binaryAssignOperator = 23, RULE_type = 24, RULE_binaryOperator = 25, 
		RULE_unaryOperation = 26, RULE_singleAssignOperator = 27;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "headers", "header", "block", "function", "arguments", "argument", 
			"references", "r_class", "struct", "classOrStructBody", "field", "using", 
			"body", "r_for", "r_while", "r_if", "r_switch", "r_case", "instruction", 
			"maybeExpression", "expression", "value", "binaryAssignOperator", "type", 
			"binaryOperator", "unaryOperation", "singleAssignOperator"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'\"'", "'using'", "'int'", "'long long'", "'auto'", "'bool'", 
			"'double'", "'long double'", "'void'", "'string'", "'vector'", "'++'", 
			"'--'", null, "'+='", "'-='", "'*='", "'/='", "'%='", "'^='", "'&='", 
			"'|='", "'<<='", "'>>='", "'+'", "'-'", "'*'", "'/'", "'%'", "'^'", "'&'", 
			"'|'", "'<'", "'>'", "'=='", "'!='", "'<='", "'>='", null, null, "'<<'", 
			"'>>'", "'='", "'~'", "','", "';'", "'('", "')'", "'{'", "'}'", "'.'", 
			"'->'", "'['", "']'", "'::'", "':'", "'break'", "'return'", "'continue'", 
			"'delete'", "'#include'", "'for'", "'while'", "'class'", "'struct'", 
			"'if'", "'switch'", "'case'", null, null, null, null, null, "'true'", 
			"'false'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, "Int", "LongLong", "Auto", "Bool", "Double", "LongDouble", 
			"Void", "String", "Vector", "PlusPlus", "MinusMinus", "Not", "PlusAssign", 
			"MinusAssign", "MultiplyAssign", "DivAssign", "ModAssign", "XorAssign", 
			"AndAssign", "OrAssign", "LeftShiftAssign", "RightShiftAssign", "Plus", 
			"Minus", "Multiply", "Div", "Mod", "Xor", "And", "Or", "Less", "Greater", 
			"Equal", "NotEqual", "LessEqual", "GreaterEqual", "AndAnd", "OrOr", "LeftShift", 
			"RightShift", "Assign", "Tilde", "Comma", "Semicolon", "OpenBracket", 
			"CloseBracket", "OpenFigureBracket", "CloseFigureBracket", "Point", "Pointer", 
			"OpenSqBracket", "CloseSqBracket", "Child", "Colon", "Break", "Return", 
			"Continue", "Delete", "Include", "For", "While", "Class", "Struct", "If", 
			"Switch", "Case", "Number", "FloatNumber", "Digits", "Digit", "Boolean", 
			"True", "False", "Word", "AnyInQuoutes", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Program.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public ProgramParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramContext extends ParserRuleContext {
		public HeadersContext headers() {
			return getRuleContext(HeadersContext.class,0);
		}
		public List<BlockContext> block() {
			return getRuleContexts(BlockContext.class);
		}
		public BlockContext block(int i) {
			return getRuleContext(BlockContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProgramListener ) ((ProgramListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProgramListener ) ((ProgramListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ProgramVisitor ) return ((ProgramVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(56);
			headers();
			setState(60);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (((((_la - 2)) & ~0x3f) == 0 && ((1L << (_la - 2)) & ((1L << (T__1 - 2)) | (1L << (Int - 2)) | (1L << (LongLong - 2)) | (1L << (Auto - 2)) | (1L << (Bool - 2)) | (1L << (Double - 2)) | (1L << (LongDouble - 2)) | (1L << (Void - 2)) | (1L << (String - 2)) | (1L << (Vector - 2)) | (1L << (Class - 2)) | (1L << (Struct - 2)))) != 0)) {
				{
				{
				setState(57);
				block();
				}
				}
				setState(62);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class HeadersContext extends ParserRuleContext {
		public List<HeaderContext> header() {
			return getRuleContexts(HeaderContext.class);
		}
		public HeaderContext header(int i) {
			return getRuleContext(HeaderContext.class,i);
		}
		public HeadersContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_headers; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProgramListener ) ((ProgramListener)listener).enterHeaders(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProgramListener ) ((ProgramListener)listener).exitHeaders(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ProgramVisitor ) return ((ProgramVisitor<? extends T>)visitor).visitHeaders(this);
			else return visitor.visitChildren(this);
		}
	}

	public final HeadersContext headers() throws RecognitionException {
		HeadersContext _localctx = new HeadersContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_headers);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(66);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==Include) {
				{
				{
				setState(63);
				header();
				}
				}
				setState(68);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class HeaderContext extends ParserRuleContext {
		public TerminalNode Include() { return getToken(ProgramParser.Include, 0); }
		public TerminalNode Less() { return getToken(ProgramParser.Less, 0); }
		public List<TerminalNode> Word() { return getTokens(ProgramParser.Word); }
		public TerminalNode Word(int i) {
			return getToken(ProgramParser.Word, i);
		}
		public TerminalNode Greater() { return getToken(ProgramParser.Greater, 0); }
		public TerminalNode Point() { return getToken(ProgramParser.Point, 0); }
		public HeaderContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_header; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProgramListener ) ((ProgramListener)listener).enterHeader(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProgramListener ) ((ProgramListener)listener).exitHeader(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ProgramVisitor ) return ((ProgramVisitor<? extends T>)visitor).visitHeader(this);
			else return visitor.visitChildren(this);
		}
	}

	public final HeaderContext header() throws RecognitionException {
		HeaderContext _localctx = new HeaderContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_header);
		int _la;
		try {
			setState(85);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(69);
				match(Include);
				setState(70);
				match(Less);
				setState(71);
				match(Word);
				setState(74);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==Point) {
					{
					setState(72);
					match(Point);
					setState(73);
					match(Word);
					}
				}

				setState(76);
				match(Greater);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(77);
				match(Include);
				setState(78);
				match(T__0);
				setState(79);
				match(Word);
				setState(82);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==Point) {
					{
					setState(80);
					match(Point);
					setState(81);
					match(Word);
					}
				}

				setState(84);
				match(T__0);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BlockContext extends ParserRuleContext {
		public List<FunctionContext> function() {
			return getRuleContexts(FunctionContext.class);
		}
		public FunctionContext function(int i) {
			return getRuleContext(FunctionContext.class,i);
		}
		public List<R_classContext> r_class() {
			return getRuleContexts(R_classContext.class);
		}
		public R_classContext r_class(int i) {
			return getRuleContext(R_classContext.class,i);
		}
		public List<StructContext> struct() {
			return getRuleContexts(StructContext.class);
		}
		public StructContext struct(int i) {
			return getRuleContext(StructContext.class,i);
		}
		public List<UsingContext> using() {
			return getRuleContexts(UsingContext.class);
		}
		public UsingContext using(int i) {
			return getRuleContext(UsingContext.class,i);
		}
		public BlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_block; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProgramListener ) ((ProgramListener)listener).enterBlock(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProgramListener ) ((ProgramListener)listener).exitBlock(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ProgramVisitor ) return ((ProgramVisitor<? extends T>)visitor).visitBlock(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BlockContext block() throws RecognitionException {
		BlockContext _localctx = new BlockContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_block);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(91); 
			_errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					setState(91);
					_errHandler.sync(this);
					switch (_input.LA(1)) {
					case Int:
					case LongLong:
					case Auto:
					case Bool:
					case Double:
					case LongDouble:
					case Void:
					case String:
					case Vector:
						{
						setState(87);
						function();
						}
						break;
					case Class:
						{
						setState(88);
						r_class();
						}
						break;
					case Struct:
						{
						setState(89);
						struct();
						}
						break;
					case T__1:
						{
						setState(90);
						using();
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(93); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
			} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunctionContext extends ParserRuleContext {
		public FunctionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_function; }
	 
		public FunctionContext() { }
		public void copyFrom(FunctionContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class NotFullFunctionContext extends FunctionContext {
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode Word() { return getToken(ProgramParser.Word, 0); }
		public TerminalNode OpenBracket() { return getToken(ProgramParser.OpenBracket, 0); }
		public ArgumentsContext arguments() {
			return getRuleContext(ArgumentsContext.class,0);
		}
		public TerminalNode CloseBracket() { return getToken(ProgramParser.CloseBracket, 0); }
		public TerminalNode Semicolon() { return getToken(ProgramParser.Semicolon, 0); }
		public NotFullFunctionContext(FunctionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProgramListener ) ((ProgramListener)listener).enterNotFullFunction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProgramListener ) ((ProgramListener)listener).exitNotFullFunction(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ProgramVisitor ) return ((ProgramVisitor<? extends T>)visitor).visitNotFullFunction(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class FullFunctionContext extends FunctionContext {
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode Word() { return getToken(ProgramParser.Word, 0); }
		public TerminalNode OpenBracket() { return getToken(ProgramParser.OpenBracket, 0); }
		public ArgumentsContext arguments() {
			return getRuleContext(ArgumentsContext.class,0);
		}
		public TerminalNode CloseBracket() { return getToken(ProgramParser.CloseBracket, 0); }
		public TerminalNode OpenFigureBracket() { return getToken(ProgramParser.OpenFigureBracket, 0); }
		public BodyContext body() {
			return getRuleContext(BodyContext.class,0);
		}
		public TerminalNode CloseFigureBracket() { return getToken(ProgramParser.CloseFigureBracket, 0); }
		public FullFunctionContext(FunctionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProgramListener ) ((ProgramListener)listener).enterFullFunction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProgramListener ) ((ProgramListener)listener).exitFullFunction(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ProgramVisitor ) return ((ProgramVisitor<? extends T>)visitor).visitFullFunction(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FunctionContext function() throws RecognitionException {
		FunctionContext _localctx = new FunctionContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_function);
		try {
			setState(111);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				_localctx = new FullFunctionContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(95);
				type();
				setState(96);
				match(Word);
				setState(97);
				match(OpenBracket);
				setState(98);
				arguments();
				setState(99);
				match(CloseBracket);
				setState(100);
				match(OpenFigureBracket);
				setState(101);
				body();
				setState(102);
				match(CloseFigureBracket);
				}
				break;
			case 2:
				_localctx = new NotFullFunctionContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(104);
				type();
				setState(105);
				match(Word);
				setState(106);
				match(OpenBracket);
				setState(107);
				arguments();
				setState(108);
				match(CloseBracket);
				setState(109);
				match(Semicolon);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ArgumentsContext extends ParserRuleContext {
		public List<ArgumentContext> argument() {
			return getRuleContexts(ArgumentContext.class);
		}
		public ArgumentContext argument(int i) {
			return getRuleContext(ArgumentContext.class,i);
		}
		public List<TerminalNode> Comma() { return getTokens(ProgramParser.Comma); }
		public TerminalNode Comma(int i) {
			return getToken(ProgramParser.Comma, i);
		}
		public ArgumentsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_arguments; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProgramListener ) ((ProgramListener)listener).enterArguments(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProgramListener ) ((ProgramListener)listener).exitArguments(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ProgramVisitor ) return ((ProgramVisitor<? extends T>)visitor).visitArguments(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ArgumentsContext arguments() throws RecognitionException {
		ArgumentsContext _localctx = new ArgumentsContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_arguments);
		try {
			int _alt;
			setState(123);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case Int:
			case LongLong:
			case Auto:
			case Bool:
			case Double:
			case LongDouble:
			case Void:
			case String:
			case Vector:
				enterOuterAlt(_localctx, 1);
				{
				setState(118);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,8,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(113);
						argument();
						setState(114);
						match(Comma);
						}
						} 
					}
					setState(120);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,8,_ctx);
				}
				setState(121);
				argument();
				}
				break;
			case CloseBracket:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ArgumentContext extends ParserRuleContext {
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public ReferencesContext references() {
			return getRuleContext(ReferencesContext.class,0);
		}
		public TerminalNode Word() { return getToken(ProgramParser.Word, 0); }
		public ArgumentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_argument; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProgramListener ) ((ProgramListener)listener).enterArgument(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProgramListener ) ((ProgramListener)listener).exitArgument(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ProgramVisitor ) return ((ProgramVisitor<? extends T>)visitor).visitArgument(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ArgumentContext argument() throws RecognitionException {
		ArgumentContext _localctx = new ArgumentContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_argument);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(125);
			type();
			setState(127);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==Multiply) {
				{
				setState(126);
				references();
				}
			}

			setState(130);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==Word) {
				{
				setState(129);
				match(Word);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ReferencesContext extends ParserRuleContext {
		public List<TerminalNode> Multiply() { return getTokens(ProgramParser.Multiply); }
		public TerminalNode Multiply(int i) {
			return getToken(ProgramParser.Multiply, i);
		}
		public ReferencesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_references; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProgramListener ) ((ProgramListener)listener).enterReferences(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProgramListener ) ((ProgramListener)listener).exitReferences(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ProgramVisitor ) return ((ProgramVisitor<? extends T>)visitor).visitReferences(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ReferencesContext references() throws RecognitionException {
		ReferencesContext _localctx = new ReferencesContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_references);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(133); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(132);
				match(Multiply);
				}
				}
				setState(135); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==Multiply );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class R_classContext extends ParserRuleContext {
		public TerminalNode Class() { return getToken(ProgramParser.Class, 0); }
		public TerminalNode Word() { return getToken(ProgramParser.Word, 0); }
		public TerminalNode OpenFigureBracket() { return getToken(ProgramParser.OpenFigureBracket, 0); }
		public ClassOrStructBodyContext classOrStructBody() {
			return getRuleContext(ClassOrStructBodyContext.class,0);
		}
		public TerminalNode CloseFigureBracket() { return getToken(ProgramParser.CloseFigureBracket, 0); }
		public R_classContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_r_class; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProgramListener ) ((ProgramListener)listener).enterR_class(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProgramListener ) ((ProgramListener)listener).exitR_class(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ProgramVisitor ) return ((ProgramVisitor<? extends T>)visitor).visitR_class(this);
			else return visitor.visitChildren(this);
		}
	}

	public final R_classContext r_class() throws RecognitionException {
		R_classContext _localctx = new R_classContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_r_class);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(137);
			match(Class);
			setState(138);
			match(Word);
			setState(139);
			match(OpenFigureBracket);
			setState(140);
			classOrStructBody();
			setState(141);
			match(CloseFigureBracket);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StructContext extends ParserRuleContext {
		public TerminalNode Struct() { return getToken(ProgramParser.Struct, 0); }
		public TerminalNode Word() { return getToken(ProgramParser.Word, 0); }
		public TerminalNode OpenFigureBracket() { return getToken(ProgramParser.OpenFigureBracket, 0); }
		public ClassOrStructBodyContext classOrStructBody() {
			return getRuleContext(ClassOrStructBodyContext.class,0);
		}
		public TerminalNode CloseFigureBracket() { return getToken(ProgramParser.CloseFigureBracket, 0); }
		public StructContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_struct; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ProgramListener ) ((ProgramListener)listener).enterStruct(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ProgramListener ) ((ProgramListener)listener).exitStruct(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ProgramVisitor ) return ((ProgramVisitor<? extends T>)visitor).visitStruct(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StructContext struct() throws RecognitionException {
		StructContext _localctx = new StructContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_struct);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(143);
			match(Struct);
			setState(144);
			match(Word);
			setState(145);
			match(OpenFigureBracket);
			setState(146);
			classOrStructBody();
			setState(147);
			match(CloseFigureBracket);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
